Fixes #9 with use of z-index in CSS.

--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -10,6 +10,7 @@
   // Positioning context for the mobile navigation icon
   position: relative;
   background-color: $background-color;opacity:0.8;
+  z-index: 1;
 }
 
 .site-title {
@@ -34,9 +35,10 @@
   top: 9px;
   right: $spacing-unit / 2;
   background-color: $background-color;
-  border: 1px solid $border-color-01;
+  border: 2px solid $border-color-01;
   border-radius: 5px;
   text-align: right;
+  z-index: 2;
 
   .nav-trigger {
     display: none;
@@ -206,6 +208,7 @@
   padding: $spacing-unit 0;
   flex: 1 0 auto;
   background-color: $background-color;opacity:0.9;
+  z-index: 0;
 }
 
 .page-heading {
